--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-permission": "^5.10"
+        "php-http/guzzle7-adapter": "^1.0",
+        "spatie/laravel-permission": "^5.10",
+        "typesense/laravel-scout-typesense-driver": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
