--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "gabrielelana/byte-units": "^0.5.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "php-http/guzzle7-adapter": "^1.0",
+        "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-permission": "^5.10",
         "typesense/laravel-scout-typesense-driver": "^5.2"
     },
