--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "gabrielelana/byte-units": "^0.5.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
+        "laravel/passport": "^11.9",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "php-http/guzzle7-adapter": "^1.0",
